<resources>
    <!-- Application Info -->
    <string name="app_name">Reserver</string>

    <!-- UI Labels -->
    <string name="seating_prompt">Where do you want to sit?</string>
    <string name="seat_count_prompt">How many seats would you like to reserve?</string>
    <string name="seat_count_input_hint">Enter a number</string>
    <string name="submit">Submit</string>
    <string name="seating_overhead_view">Seating overhead view</string>
    <string name="img_floor_plan">Floor plan</string>
    <string name="img_small_round_table_icon">Small round table icon</string>
    <string name="img_large_rectangle_table_icon">Large rectangle table icon</string>
    <string name="back_icon">Back icon</string>

    <!-- Days of the Week -->
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Time Slots -->
    <string name="four_pm">4:00 p.m.</string>
    <string name="four_thirty_pm">4:30 p.m.</string>
    <string name="five_pm">5:00 p.m.</string>
    <string name="five_thirty_pm">5:30 p.m.</string>
    <string name="six_pm">6:00 p.m.</string>
    <string name="six_thirty_pm">6:30 p.m.</string>
    <string name="seven_pm">7:00 p.m.</string>
    <string name="seven_thirty_pm">7:30 p.m.</string>

    <!-- Feedback Messages -->
    <string name="seat_count_error_msg">The number must be between 1 and 6</string>
    <string name="seat_count_larger_than_6_msg">Please call 123–456–7890 to make a reservation for parties larger than 6</string>
    <string name="seat_count_success_msg">Thank you for reserving your seat(s)!</string>
    <string name="seat_count_empty_error_msg">Please enter the amount of seats you would like to reserve</string>
    <string name="seat_count_gt_1000">Okay, let\'s not get ridiculous.</string>
    <string name="reservation_confirmation">Thank you %1$s for reserving table %2$s on %3$s at %4$s!</string>

    <!-- Menu Items -->
    <string name="help">Help</string>
    <string name="info">Information</string>

    <!-- Reservation Instructions -->
    <string name="how_to_make_a_reservation">How to Make a Reservation</string>
    <string name="help_step_1">1. Enter the number of seats you would like to reserve, pick a day, pick a time, and press Submit.</string>
    <string name="help_step_2">2. Select ONE table, enter your name, and press Reserve</string>

    <!-- Miscellaneous -->
    <string name="empty_string"> </string>
    <string name="a_graphic_of_a_waiter">A graphic of a waiter</string>
    <string name="Back">Back</string>
    <string name="time_slot">Time Slot</string>
    <string name="enter_your_name_to_reserve">Enter your name to reserve your seat</string>
    <string name="reserve">Reserve</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="send_email_msg">Below are buttons to set a notification and to email friends and family about your reservation.</string>
    <string name="reminder">Reminder</string>
    <string name="check_in_prompt">Please take a photo of yourself to check in</string>
    <string name="check_in">CHECK IN</string>
    <string name="activate_camera">Activate Camera</string>
    <string name="save">Save</string>
    <string name="retake">Retake</string>
    <string name="cancel">Cancel</string>
    <string name="placeholder_image">placeholder image</string>
</resources>
